--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <header>
         <div class="container">
-        <h1><a href="index.html">NURMALA BEAUTY</a></h1>
+        <h1><a href="index.html">NUMALA BEAUTY</a></h1>
         <ul>
             <li class="active"><a href="index.html">HOME</a></li>
             <li><a href="product.html">PRODUCT</a></li>
@@ -52,7 +52,7 @@
     <!-- footer -->
     <footer>
         <div class="container">
-            <small> Copyright &copy; 2021 - Nurmala Beauty, All rights Reserved.</small>
+            <small> Copyright &copy; 2021 - Numala Beauty, All rights Reserved.</small>
         </div>
     </footer>
 </body>
