--- a/index2.html
+++ b/index2.html
@@ -61,6 +61,9 @@
       </div>
     </div>
     <footer>
+      <h2>NUMALA BEAUTY.</h2>
+      <p>Your Beauty Solution</p>
+      <p>Beauty Is Yours</p>
     </footer>
   </body>
 </html>
