--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="header-right">
         <ul>
-          <li><a href="#">HOME</a></li>
+          <li><a href="https://mayapuji.github.io/NumalaBeauty/">HOME</a></li>
           <li><a href="#">PRODUCK</a></li>
           <li><a href="#">CONTACT</a></li>
         </ul>
